0026121: Visualization - revise implementation of point sets used in Select3D_SensitiveFace

Code duplication was eliminated by removing constructors with handle input arrays